Add reflection warning to documentation